@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-09-30T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2023-10-12T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-10-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
