@@ -1,3 +1,12 @@
+2023-10-13T08:18:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6505771102 # 1279
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
+* notice: last 14d: unq all: 6 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 520 885 / 544 922
+* notice: next accum: outdated-unq outdated-all / unq all: 520 885 / 545 923
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-29 2023-10-13]
+
 2023-10-13T01:02:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6502686972 # 1278
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-13
